<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="ST_DataFmtBase" Id="{41185959-e5ed-4831-a9c0-0e994416e5f2}">
    <Declaration><![CDATA[TYPE ST_DataFmtBase :
STRUCT
	nGroup:DINT;
	nNumber:DINT;
	sTxt_ENG:STRING;
	sTxt_CHN:WSTRING;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>