<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="ST_OUTPUT_IO" Id="{a0e110dd-90aa-48db-b82b-69b96e894010}">
    <Declaration><![CDATA[TYPE ST_OUTPUT_IO :
STRUCT
	io AT%Q*:ARRAY [1..16] OF BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>